--- a/CryptoApp/app/src/main/res/layout/item_crypto_list.xml
+++ b/CryptoApp/app/src/main/res/layout/item_crypto_list.xml
@@ -34,19 +34,19 @@
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Bitcoin" />
+            tools:text="@string/name" />
 
         <TextView
             android:id="@+id/tvTag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="BTC" />
+            tools:text="@string/TAG" />
 
         <TextView
             android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="18378" />
+            tools:text="@string/price" />
     </LinearLayout>
 
     <ImageButton
