--- a/CryptoApp/app/src/main/res/layout/activity_main.xml
+++ b/CryptoApp/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,23 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorSecondary" />
+            android:background="?attr/colorSecondary" >
+
+            <ImageButton
+                android:id="@+id/portfolio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_profile">
+                </ImageButton>
+
+            <ImageButton
+                android:id="@+id/addAsset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_add">
+            </ImageButton>
+
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
