--- a/CryptoApp/app/src/main/res/layout/item_crypto_list.xml
+++ b/CryptoApp/app/src/main/res/layout/item_crypto_list.xml
@@ -9,11 +9,12 @@
     android:paddingRight="16dp"
     android:paddingTop="8dp">
 
-    <CheckBox
+    <ImageButton
         android:id="@+id/cbIsSelected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:src="@drawable/crypto_icon"
          />
 
     <ImageView
