--- a/CryptoApp/app/src/main/res/layout/activity_main.xml
+++ b/CryptoApp/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,11 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMain"
         android:layout_width="match_parent"
